--- a/public/css/fullcalendar.css
+++ b/public/css/fullcalendar.css
@@ -336,12 +336,12 @@ temporary rendered events).
   font-size: .85em;
   line-height: 1.3;
   border-radius: 3px;
-  border: 1px solid #3a87ad;
+  border: 1px solid #62f4ae;
   /* default BORDER color */ }
 
 .fc-event,
 .fc-event-dot {
-  background-color: #3a87ad;
+  background-color: #62f4ae;
   /* default BACKGROUND color */ }
 
 .fc-event,
@@ -1291,3 +1291,7 @@ be a descendant of the grid when it is being dragged.
 .fc-unthemed .fc-list-empty {
   /* theme will provide own background */
   background-color: #eee; }
+
+element.style{
+    height: 653.766px;
+}
