buscando mostrar turnos.

--- a/public/css/fullcalendar.css
+++ b/public/css/fullcalendar.css
@@ -29,7 +29,7 @@ body .fc {
 .fc-nonbusiness {
   /* default look for non-business-hours areas */
   /* will inherit .fc-bgevent's styles */
-  background: #d7d7d7; }
+  background: #f77272; }
 
 /* Buttons (styled <button> tags, normalized to work cross-browser)
 --------------------------------------------------------------------------------------------------*/
